--- a/.github/workflows/test-container-wait.yml
+++ b/.github/workflows/test-container-wait.yml
@@ -1,13 +1,13 @@
+name: Test Container Wait
 on: workflow_dispatch
 jobs:
   test:
     runs-on: Linux
     steps:
-    - name: Send for a Message
+    - name: Wait for a Message
       uses: soda480/wait-for-message-action@main
       with:
-        command: "send"
-        ip: "192.168.1.184"
+        command: "wait"
         port: 8080
         message: "ready to proceed"
         timeout: 60
