--- a/.github/workflows/test-job-sync-steps.yml
+++ b/.github/workflows/test-job-sync-steps.yml
@@ -1,19 +1,19 @@
-name: Test Jobs Sync
+name: Test Jobs Sync within Steps
 on: workflow_dispatch
 jobs:
 
   get_windows_ip:
     name: Get Windows IP
     runs-on: Windows
+    outputs:
+      windows_ip: ${{ steps.get_ip.outputs.windows_ip }}
     steps:
     - name: Get Windows IP
       id: get_ip
+      shell: powershell
       run: |
-        python -c "import socket;print(f'windows_ip={socket.gethostbyname(socket.gethostname())}')" >> windows_ip_address.txt
-    - uses: actions/upload-artifact@v3
-      with:
-        name: windows_ip_address_file
-        path: windows_ip_address.txt
+        $IP = (Get-NetIPConfiguration | Where-Object { $_.IPv4DefaultGateway -ne $null -and $_.NetAdapter.Status -ne "Disconnected" }).IPv4Address.IPAddress
+        Write-Output "windows_ip=$IP" | Out-File -FilePath $Env:GITHUB_OUTPUT -Encoding utf8 -Append
 
   get_linux_ip:
     name: Get Linux IP
@@ -24,7 +24,9 @@ jobs:
     - name: Get Linux IP
       id: get_ip
       run: |
-        python -c "import socket;print(f'linux_ip={socket.gethostbyname(socket.gethostname())}')" >> $GITHUB_OUTPUT
+        value=$( hostname -I | awk {'print $1'} )
+        echo $value
+        echo "linux_ip=$value" >> $GITHUB_OUTPUT
 
   windows_workflow:
     name: Windows Workflow
@@ -61,23 +63,17 @@ jobs:
     - name: Build App Task
       run: sleep 60
       shell: bash
-    - uses: actions/download-artifact@v3
-      with:
-        name: windows_ip_address_file
-    - name: Read Windows IP
-      id: read_ip_address
-      run: |
-        cat windows_ip_address.txt >> $GITHUB_OUTPUT
     - name: Send Linux server is ready message
       uses: soda480/wait-for-message-action@main
       with:
         command: "send"
-        ip: ${{ steps.read_ip_address.outputs.windows_ip }}
+        ip: ${{ needs.get_windows_ip.outputs.windows_ip }}
         port: 8080
         delay: 10
         attempts: 10
         message: "Linux server is ready"
         shell: bash
+        use_container: true
     - name: Wait for Windows server to be ready message
       uses: soda480/wait-for-message-action@main
       with:
@@ -86,6 +82,7 @@ jobs:
         timeout: 120
         message: "Windows server is ready"
         shell: bash
+        use_container: true
     - name: Run Tests Task
       run: sleep 10
       shell: bash
