--- a/.github/workflows/test-job-sync.yml
+++ b/.github/workflows/test-job-sync.yml
@@ -10,12 +10,10 @@ jobs:
     steps:
     - name: Get Windows IP
       id: get_ip
+      shell: powershell
       run: |
-        python -c "import socket;print(f'windows_ip={socket.gethostbyname(socket.gethostname())}')" >> windows_ip_address.txt
-    - uses: actions/upload-artifact@v3
-      with:
-        name: windows_ip_address_file
-        path: windows_ip_address.txt
+        $IP = (Get-NetIPConfiguration | Where-Object { $_.IPv4DefaultGateway -ne $null -and $_.NetAdapter.Status -ne "Disconnected" }).IPv4Address.IPAddress
+        Write-Output "windows_ip=$IP" | Out-File -FilePath $Env:GITHUB_OUTPUT -Encoding utf8 -Append
 
   get_linux_ip:
     name: L- Get Linux IP
@@ -26,7 +24,8 @@ jobs:
     - name: Get Linux IP
       id: get_ip
       run: |
-        python -c "import socket;print(f'linux_ip={socket.gethostbyname(socket.gethostname())}')" >> $GITHUB_OUTPUT
+        value=$( hostname -I | awk {'print $1'} )
+        echo "linux_ip=$value" >> $GITHUB_OUTPUT
 
   wait_linux_ready:
     name: W- Wait Linux Ready
@@ -81,23 +80,17 @@ jobs:
     runs-on: Linux
     needs: [get_windows_ip, build_app]
     steps:
-    - uses: actions/download-artifact@v3
-      with:
-        name: windows_ip_address_file
-    - name: Read Windows IP
-      id: read_ip_address
-      run: |
-        cat windows_ip_address.txt >> $GITHUB_OUTPUT
     - name: Send Linux server is ready message
       uses: soda480/wait-for-message-action@main
       with:
         command: "send"
-        ip: ${{ steps.read_ip_address.outputs.windows_ip }}
+        ip: ${{ needs.get_windows_ip.outputs.windows_ip }}
         port: 8080
         delay: 10
         attempts: 10
         message: "Linux server is ready"
         shell: bash
+        use_container: true
 
   wait_windows_ready:
     name: L- Wait Windows Ready
@@ -112,6 +105,7 @@ jobs:
         timeout: 120
         message: "Windows server is ready"
         shell: bash
+        use_container: true
 
   run_tests:
     name: L- Run Tests
