--- a/.github/workflows/test-container-send.yml
+++ b/.github/workflows/test-container-send.yml
@@ -1,5 +1,5 @@
 name: Test Container Send
-on: [push]
+on: workflow_dispatch
 jobs:
   test:
     runs-on: Linux
@@ -8,7 +8,7 @@ jobs:
       uses: soda480/wait-for-message-action@main
       with:
         command: "send"
-        ip: "192.168.1.184
+        ip: "192.168.1.184"
         port: 8080
         message: "ready to proceed"
         timeout: 60
