--- a/.github/workflows/test-container-send.yml
+++ b/.github/workflows/test-container-send.yml
@@ -10,7 +10,7 @@ jobs:
         command: "send"
         ip: "192.168.1.184"
         port: 8080
-        message: "ready to proceed"
+        message: "ready to proceed:this is the message body"
         timeout: 60
         use_container: true
     - name: Continue
