--- a/.github/workflows/test-container-wait.yml
+++ b/.github/workflows/test-container-wait.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: Linux
     steps:
     - name: Wait for a Message
-      uses: soda480/wait-for-message-action@main
+      uses: soda480/wait-for-message-action@test
       id: wait_message
       with:
         command: "wait"
