--- a/.github/workflows/test-contexts.yml
+++ b/.github/workflows/test-contexts.yml
@@ -12,21 +12,21 @@ jobs:
       run: |
         value=$( hostname -I | awk {'print $1'} )
         echo "linux_ip=$value" >> $GITHUB_OUTPUT
-        echo ${{ github.run_id }}
-        echo ${{ github.run_number }}
-        echo ${{ github.run_attempt }}
-        echo ${{ github.job }}
-        echo ${{ runner.os }}
-        echo ${{ runner.name }}
+        echo "github.run_id: ${{ github.run_id }}"
+        echo "github.run_number: ${{ github.run_number }}"
+        echo "github.run_attempt: ${{ github.run_attempt }}"
+        echo "runner.job: ${{ github.job }}"
+        echo "runner.os: ${{ runner.os }}"
+        echo "runner.name: ${{ runner.name }}"
   something_else:
     name: Something Else
     runs-on: Linux
     steps:
     - name: Print Context
       run: |
-        echo ${{ github.run_id }}
-        echo ${{ github.run_number }}
-        echo ${{ github.run_attempt }}
-        echo ${{ github.job }}
-        echo ${{ runner.os }}
-        echo ${{ runner.name }}
+        echo "github.run_id: ${{ github.run_id }}"
+        echo "github.run_number: ${{ github.run_number }}"
+        echo "github.run_attempt: ${{ github.run_attempt }}"
+        echo "runner.job: ${{ github.job }}"
+        echo "runner.os: ${{ runner.os }}"
+        echo "runner.name: ${{ runner.name }}"
