--- a/.github/workflows/test-wait-for-ip-2.yml
+++ b/.github/workflows/test-wait-for-ip-2.yml
@@ -1,4 +1,4 @@
-name: Test wait-for-ip Store-Linux Wait-Waindows
+name: Test wait-for-ip Store-Linux Wait-Windows
 on: workflow_dispatch
 jobs:
   store:
