--- a/.github/workflows/test-wait-for-ip-4.yml
+++ b/.github/workflows/test-wait-for-ip-4.yml
@@ -4,10 +4,10 @@ jobs:
   store:
     runs-on: Windows
     steps:
-    - name: Sleep for a bit
+    - name: On Windows - Sleep for a bit
       run: start-sleep 60
       shell: powershell
-    - name: Store IP
+    - name: On Windows - Store Windows IP
       uses: soda480/wait-for-ip-action@main
       with:
         command: "store"
@@ -16,8 +16,9 @@ jobs:
   wait:
     runs-on: Linux
     steps:
-    - name: Wait IP
+    - name: On Linux - Wait Windows IP
       uses: soda480/wait-for-ip-action@main
+      id: wait
       with:
         command: "wait"
         redis_host: "192.168.1.199"
@@ -25,3 +26,6 @@ jobs:
         delay: 10
         attempts: 18
         use_container: true
+    - name: Show Windows IP
+      run: |
+        echo "The Windows IP address is: ${{ steps.wait.outputs.response_container }}"
