--- a/.github/workflows/test-wait-for-ip-2.yml
+++ b/.github/workflows/test-wait-for-ip-2.yml
@@ -4,9 +4,9 @@ jobs:
   store:
     runs-on: Linux
     steps:
-    - name: Sleep for a bit
+    - name: On Linux - Sleep for a bit
       run: sleep 60
-    - name: Store IP
+    - name: On Linux - Store IP
       uses: soda480/wait-for-ip-action@main
       with:
         command: "store"
@@ -15,8 +15,9 @@ jobs:
   wait:
     runs-on: Windows
     steps:
-    - name: Wait IP
+    - name: On Windows - Wait Linux IP
       uses: soda480/wait-for-ip-action@main
+      id: get_linux_ip
       with:
         command: "wait"
         redis_host: "192.168.1.199"
@@ -24,3 +25,6 @@ jobs:
         delay: 10
         attempts: 18
         shell: cmd
+    - name: On Windows - Show Linux IP
+      run: |
+        echo "The Linux IP address is: ${{ steps.get_linux_ip.outputs.response_windows }}"
