--- a/.github/workflows/test-wait-for-ip-1.yml
+++ b/.github/workflows/test-wait-for-ip-1.yml
@@ -13,6 +13,7 @@ jobs:
         command: "store"
         redis_host: "192.168.1.199"
         tag: "Win001"
+        shell: cmd
   wait:
     runs-on: Linux
     steps:
