--- a/.github/workflows/test-job-sync-steps-with-wait-for-ip.yml
+++ b/.github/workflows/test-job-sync-steps-with-wait-for-ip.yml
@@ -15,6 +15,7 @@ jobs:
         redis_port: 25061
         redis_password: ${{ secrets.REDIS_PASSWORD }}
         tag: "Windows1"
+        shell: cmd
 
     - name: Wait Linux IP
       uses: soda480/wait-for-ip-action@main
@@ -27,6 +28,7 @@ jobs:
         tag: "Linux1"
         delay: 10
         attempts: 18
+        shell: cmd
 
     - name: Wait for Linux server to be ready
       uses: soda480/wait-for-message-action@main
