--- a/.github/workflows/test-job-sync-steps-with-wait-for-ip.yml
+++ b/.github/workflows/test-job-sync-steps-with-wait-for-ip.yml
@@ -11,9 +11,10 @@ jobs:
       uses: soda480/wait-for-ip-action@main
       with:
         command: "store"
-        redis_host: "db-redis-sfo2-44676-do-user-5080416-0.b.db.ondigitalocean.com"
-        redis_port: 25061
-        redis_password: ${{ secrets.REDIS_PASSWORD }}
+        redis_host: "192.168.1.199"
+        # redis_host: "db-redis-sfo2-44676-do-user-5080416-0.b.db.ondigitalocean.com"
+        # redis_port: 25061
+        # redis_password: ${{ secrets.REDIS_PASSWORD }}
         tag: "Windows1"
         shell: cmd
 
@@ -22,9 +23,10 @@ jobs:
       id: get_linux_ip
       with:
         command: "wait"
-        redis_host: "db-redis-sfo2-44676-do-user-5080416-0.b.db.ondigitalocean.com"
-        redis_port: 25061
-        redis_password: ${{ secrets.REDIS_PASSWORD }}
+        redis_host: "192.168.1.199"
+        # redis_host: "db-redis-sfo2-44676-do-user-5080416-0.b.db.ondigitalocean.com"
+        # redis_port: 25061
+        # redis_password: ${{ secrets.REDIS_PASSWORD }}
         tag: "Linux1"
         delay: 10
         attempts: 18
@@ -47,7 +49,7 @@ jobs:
       uses: soda480/wait-for-message-action@main
       with:
         command: "send"
-        ip: ${{ steps.get_linux_ip.outputs.response_windows }}
+        ip: ${{ steps.get_linux_ip.outputs.response_from_windows }}
         port: 8080
         delay: 5
         attempts: 12
@@ -63,9 +65,10 @@ jobs:
       uses: soda480/wait-for-ip-action@main
       with:
         command: "store"
-        redis_host: "db-redis-sfo2-44676-do-user-5080416-0.b.db.ondigitalocean.com"
-        redis_port: 25061
-        redis_password: ${{ secrets.REDIS_PASSWORD }}
+        redis_host: "192.168.1.199"
+        # redis_host: "db-redis-sfo2-44676-do-user-5080416-0.b.db.ondigitalocean.com"
+        # redis_port: 25061
+        # redis_password: ${{ secrets.REDIS_PASSWORD }}
         tag: "Linux1"
         use_container: true
     
@@ -73,7 +76,7 @@ jobs:
       uses: soda480/wait-for-ip-action@main
       id: get_windows_ip
       with:
-        command: "get_windows_ip"
+        command: "wait"
         redis_host: "db-redis-sfo2-44676-do-user-5080416-0.b.db.ondigitalocean.com"
         redis_port: 25061
         redis_password: ${{ secrets.REDIS_PASSWORD }}
@@ -90,7 +93,7 @@ jobs:
       uses: soda480/wait-for-message-action@main
       with:
         command: "send"
-        ip: ${{ steps.get_windows_ip.outputs.response_container }}
+        ip: ${{ steps.get_windows_ip.outputs.response_from_container }}
         port: 8080
         delay: 10
         attempts: 10
