--- a/.github/workflows/test-job-sync-steps-with-wait-for-ip.yml
+++ b/.github/workflows/test-job-sync-steps-with-wait-for-ip.yml
@@ -4,7 +4,7 @@ jobs:
 
   windows_workflow:
     name: Windows Workflow
-    runs-on: windows-latest
+    runs-on: Windows # windows-latest
     steps:
 
     - name: Store Windows IP
@@ -58,7 +58,7 @@ jobs:
 
   linux_workflow:
     name: Linux Workflow
-    runs-on: ubuntu-latest
+    runs-on: Linux # ubuntu-latest
     steps:
     
     - name: Store Linux IP
